--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,22 @@
 .login-button {
   margin-top: 25px !important;
 }
+
+.add-container {
+  /* background: tomato; */
+  display: flex;
+  width: 90%;
+  margin: 40px auto;
+  justify-content: space-between;
+}
+.add-form {
+  display: flex;
+  flex-direction: column;
+  /* margin: 50px auto; */
+  width: 48%;
+}
+.map {
+  height: 400px;
+  width: 48%;
+  background: turquoise;
+}
